--- a/app.yaml
+++ b/app.yaml
@@ -17,7 +17,9 @@ env_variables:
   CACHE_DRIVER: database
   SESSION_DRIVER: database
   ## Set these environment variables according to your CloudSQL configuration.
+  DB_CONNECTION: mysql
   DB_HOST: localhost
+  DB_PORT: 3306
   DB_DATABASE: myproject
   DB_USERNAME: root
   DB_PASSWORD: myproject
