--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ DB_USERNAME=root
 DB_PASSWORD=myproject
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-SESSION_DRIVER=file
+CACHE_DRIVER=database
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
